dataset1235/2025-2/805158916/users/4160895627/executions/1584167357_208040576.log
== RUN (2025-08-27 14:22:24)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = preco - 0.15* preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:22:13)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = preco - 0.15* preco
print(final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(final)
          ^^^^^
NameError: name 'final' is not defined
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(final)
          ^^^^^
NameError: name 'final' is not defined
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(final)
          ^^^^^
NameError: name 'final' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(final)
          ^^^^^
NameError: name 'final' is not defined
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(final)
          ^^^^^
NameError: name 'final' is not defined
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(final)
          ^^^^^
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:20:00)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 0.15* preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:19:39)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 0.15* preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:21:40)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 0.15* preco
final=preco-1.5
print(final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 1198.5
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 98.5
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 13.5
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 198.5
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 18.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:18:51)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:21:33)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 0.15* preco
final=preco-1.5
print(final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 1198.5
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 98.5
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 13.5
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 198.5
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 18.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:21:38)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 0.15* preco
final=preco-1.5
print(final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 1198.5
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 98.5
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 13.5
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 198.5
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 18.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:22:27)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = preco - 0.15* preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 17.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:21:08)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 0.15* preco
final=1.5-preco
print(final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: -1198.5
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: -98.5
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: -13.5
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: -8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: -198.5
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: -18.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:18:16)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:19:46)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 0.15* preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:20:36)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 0.15* preco
final=1.5-preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:21:03)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 0.15* preco
final=1.5-preco
print(final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: -1198.5
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: -98.5
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: -13.5
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: -8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: -198.5
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: -18.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:25)
-- CODE: 
preco = float(input("Digite o preço do produto: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o preço do produto: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o preço do produto: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o preço do produto: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o preço do produto: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o preço do produto: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o preço do produto: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
